# letter-learning

./: .gitignore
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  ai_chat.py  auth.py  base.py  dictionary_entry.py  dictionary_translation.py  menu.py  types.py  user.py  word_book.py  word_story.py
backend/app/repositories/: ai_chat.py  dictionary.py  dictionary_translation.py  menu.py  role.py  token.py  user.py  user_word_book.py  word_book.py  word_story.py
backend/app/schemas/: ai_chat.py  auth.py  dictionary.py  menu.py  profile.py  role_management.py  user_management.py  word_book.py  word_card.py  word_story.py
backend/app/services/: ai_chat.py  auth.py  dictionary.py  dictionary_translation.py  menu.py  profile.py  role_management.py  user_management.py  user_word_book.py  word_book.py  word_card.py  word_story.py
backend/app/utils/: response.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 1bbf83c969d8_initial_schema.py  1f5a408f0615_add_word_stories_table.py  2d5f7a1e1dcd_menu_management.py  3f4a8c318ae4_add_dictionary_entries_table.py  44f7b3616b8d_drop_legacy_role_tables.py  5f02fe4dbf4d_add_dictionary_definition_translations.py  770fed70558c_update_default_roles.py  (+7 more)
backend/scripts/: README.md  check_auth.py  db_stamp_head.sh
backend/sql/: README.md  initial_schema.sql  reset_admin_password.sql
backend/tests/: conftest.py  test_auth_and_user_management.py
(+303 files in other folders)
