[tool.poetry]
name = "letter-learning-backend"
version = "0.1.0"
description = "Letter Learning 平台后端服务"
authors = ["Letter Learning Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
sqlalchemy = "^2.0.28"
greenlet = "^3.0.3"
alembic = "^1.13.1"
aiomysql = "^0.2.0"
pymysql = "^1.1.0"
pydantic = { version = "^2.6.4", extras = ["email"] }
pydantic-settings = "^2.2.1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
bcrypt = "^4.1.2"
redis = "^5.0.3"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
